--- a/src/app/html/justus/julkaisutyyppi.html
+++ b/src/app/html/justus/julkaisutyyppi.html
@@ -4,7 +4,8 @@
   <div class="text-center mb-0">
     <button class="btn btn-gray"
             type="button"
-            data-ng-click="cancelAndAndStartOver()">Sulje tallentamatta</button>
+            data-ng-click="cancelAndAndStartOver()"
+            data-ng-bind="i18n.content.form.sulje[lang]"></button>
   </div>
 </div>
 
