--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -10,7 +10,9 @@
     <button class="btn btn-gray pull-right"
             type="button"
             data-ng-controller="TallennusController"
-            data-ng-click="cancelAndReturnToPublicationListing()">Sulje tallentamatta</button>
+            data-ng-click="cancelAndReturnToPublicationListing()"
+            data-ng-bind="i18n.content.form.sulje[lang]">
+    </button>
   </div>
 </div>
 
