Change ensimmainenkirjoittaja value to 0 or 1.

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -533,23 +533,23 @@
                    name="ensimmainenkirjoittaja"
                    type="radio"
                    data-ng-model="justus.julkaisu.ensimmainenkirjoittaja"
-                   value="k"
+                   value="1"
                    data-ng-change="resetValidationError('ensimmainenkirjoittaja')">
             <label for="ensimmainenkirjoittaja" data-ng-model="lab1_ensimmainenkirjoittaja"
                    class="control-label">
-              {{i18n.content.form.ensimmainenkirjoittaja['k'][lang]}}
+              {{i18n.content.form.ensimmainenkirjoittaja['1'][lang]}}
             </label>
             <input type="radio"
                    id="eiensimmainenkirjoittaja"
                    aria-labelledby="ensimmainenkirjoittaja"
                    name="ensimmainenkirjoittaja"
                    data-ng-model="justus.julkaisu.ensimmainenkirjoittaja"
-                   value="e"
+                   value="0"
                    data-ng-change="resetValidationError('ensimmainenkirjoittaja')">
             <label for="eiensimmainenkirjoittaja"
                    data-ng-model="lab2_ensimmainenkirjoittaja"
                    class="control-label">
-              {{i18n.content.form.ensimmainenkirjoittaja['e'][lang]}}
+              {{i18n.content.form.ensimmainenkirjoittaja['0'][lang]}}
             </label>
           </div>
         </div>
