Add instructions to CSV download.

--- a/src/app/html/admin/vie.html
+++ b/src/app/html/admin/vie.html
@@ -22,7 +22,8 @@
                 </div>
             </uib-accordion-heading>
             <div class="p-1">
-                <p data-ng-bind="i18n.admin.content.lataus.lataa.text[lang]"></p>
+                <p data-ng-bind="i18n.admin.content.lataus.lataa.text1[lang]"></p>
+                <p class="font-weight-bold" data-ng-bind="i18n.admin.content.lataus.lataa.text2[lang]"></p>
                     <a data-ng-href="{{csvurl}}" class="text-white btn btn-primary"
                        download="persons.csv">{{i18n.admin.content.lataus.lataa.button[lang]}}</a>
             </div>
