Change label text.

--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -88,7 +88,7 @@
 
     <!-- Ensimmäinen kirjoittaja -->
     <tr data-ng-if="isFieldVisible('ensimmainenkirjoittaja')">
-      <th class="condensed-25 font-weight-bold">Artikkelin ensimmäinen kirjoittaja on organisaation kirjoittaja</th>
+      <th class="condensed-25 font-weight-bold">{{ i18n.content.form.ensimmainenkirjoittaja.label[lang] }}</th>
       <td>{{ i18n.content.form.ensimmainenkirjoittaja[justus.julkaisu.ensimmainenkirjoittaja][lang] }}</td>
     </tr>
 
