--- a/src/app/html/footer.html
+++ b/src/app/html/footer.html
@@ -4,6 +4,11 @@
             <div class="col-xs-12 text-center text-2xl text-secondary">
                 <span class="font-weight-bold"> {{i18n.footer.help.title[lang]}}:</span> {{user.mail}}
             </div>
+            <div data-ng-if="user.seloste" class="col-xs-12 text-center text-secondary pt">
+                <span class="font-weight-bold text-xl"> {{i18n.footer.tietosuojaseloste[lang]}}:</span>
+                <a class="link-white text-xl" target="_blank" data-ng-href="{{user.seloste}}">{{i18n.footer.tietosuojaseloste.linkki[lang]}}</a>
+                <i class="fa fa-external-link"></i>
+            </div>
         </div>
         <div class="row p-1">
             <div class="col-md-3"></div>
