Enable removing author even if only one is visible

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -171,7 +171,7 @@
                              data-ng-model="tekija.nimi"
                              class="form-control focus"
                              data-ng-disabled="true">
-                      <a data-ng-click="removeTekija($index)" data-ng-hide="tekijat.length === 1"
+                      <a data-ng-click="removeTekija($index)"
                          class="text-danger cursor-pointer text-secondary pt pl-x">
                         {{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}
                         <i class="fa fa-close pl-x"></i>
