--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12">
             <div class="breadcrumb">
                 <h1 data-ng-bind="i18n.header.navigation.admin[lang]"></h1> <span><i class="fa fa-chevron-right"></i></span>
-                <h2>Haku tekijöistä</h2>
+                <h2 data-ng-bind="i18n.admin.haku[lang]"></h2>
             </div>
         </div>
     </div>
@@ -41,7 +41,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <label for="tekijahaku" class="font-weight-bold">Haku tekijöistä</label>
+                    <label for="tekijahaku" class="font-weight-bold" data-ng-bind="i18n.admin.haku[lang]"></label>
                     <div class="input-group">
                     <span class="input-group-addon bg-primary cursor-pointer border-primary">
                         <i class="fa fa-search text-white"></i>
