--- a/src/app/html/admin/vie.html
+++ b/src/app/html/admin/vie.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12">
             <div class="breadcrumb">
                 <h1 data-ng-bind="i18n.header.navigation.admin[lang]"></h1> <span><i class="fa fa-chevron-right"></i></span>
-                <h2>Tuo tekijöitä</h2>
+                <h2 data-ng-bind="i18n.admin.vie[lang]"></h2>
             </div>
         </div>
     </div>
@@ -156,12 +156,13 @@
             <div class="row" data-ng-if="csvPreviewError">
                 <div class="col-md-12">
                     <div role="alert" class="alert alert-danger text-secondary text-xl m-b">
-                        <p>
-                            <span class="font-weight-bold">Error in uploading CSV file with error: </span> <span class="break-word">{{csvErrorText}}</span>
+                        <p lang="EN">
+                            <span class="font-weight-bold">Error in uploading CSV file with message: </span> <span class="break-word">{{csvErrorText}}</span>
                         </p>
                         <p class="text-right">
                             <button type="button" class="btn btn-danger"
-                                    data-ng-click="discardChanges(csvData)">Hylkää ja yritä uudestaan</button>
+                                    data-ng-click="discardChanges(csvData)"
+                                    data-ng-bind="i18n.admin.content.lataus.tuo.error[lang]"></button>
                         </p>
                     </div>
                 </div>
@@ -177,7 +178,7 @@
              data-ng-class="{'opened': addNew.open}">
             <uib-accordion-heading class="bg-light" >
                 <div data-ng-click="addPerson()">
-                    <h4>{{i18n.admin.content.lisaa[lang]}}
+                    <h4>{{i18n.admin.content.lataus.lisaa[lang]}}
                         <i class="pull-right glyphicon"
                            data-ng-class="{'glyphicon-chevron-down': addNew.open, 'glyphicon-chevron-right': !addNew.open}"></i>
                     </h4>
@@ -194,7 +195,7 @@
                     <div class="col-xs-12">
                         <div role="alert" class="alert alert-danger mb-0">
                             <h3 class="text-secondary mt-0">
-                                Tarkasta seuraavat kentät:
+                                {{i18n.content.tietojensyotto.tarkasta[lang]}}
                             </h3>
                             <div>
                               <span class="pxs" data-ng-repeat="o in invalidFields.missingValue">
@@ -222,8 +223,8 @@
                     <div class="col-xs-4 margin-bottom-md">
                         <button class="btn btn-danger btn-block btn-lg"
                                 type="submit"
-                                data-ng-click="cancel()">
-                            Peruuta
+                                data-ng-click="cancel()"
+                                data-ng-bind="i18n.admin.content.form.peruuta[lang]">
                         </button>
                     </div>
                 </div>
