--- a/src/app/js/directives/person-form.html
+++ b/src/app/js/directives/person-form.html
@@ -56,7 +56,7 @@
                    type="text" class="form-control" name="orcid"
                    data-ng-model="selectedPerson.orcid"
                    data-orcid-directive>
-            <span class="invalid-pattern text-secondary text-danger" aria-hidden="true">Tarkasta ORCID -numeron muoto</span>
+            <span class="invalid-pattern text-secondary text-danger" aria-hidden="true" data-ng-bind="i18n.content.form.organisaatiotekija.orcid.virhe[lang]"></span>
         </div>
     </div>
 
@@ -131,7 +131,7 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <p class="text-danger font-xl">Pakolliset tiedot merkitty tähdellä  <i class="fa fa-asterisk required-star" ></i>
+            <p class="text-danger font-xl">{{i18n.content.form.pakolliset[lang]}}  <i class="fa fa-asterisk required-star" ></i>
             </p>
         </div>
     </div>
