--- a/src/app/js/shared/person-edit-modal.html
+++ b/src/app/js/shared/person-edit-modal.html
@@ -19,7 +19,7 @@
         <div class="col-xs-12">
             <div role="alert" class="alert alert-danger mb-0">
                 <h3 class="text-secondary mt-0">
-                    Tarkasta seuraavat kentät:
+                    {{i18n.content.tietojensyotto.tarkasta[lang]}}
                 </h3>
                 <div>
                   <span class="pxs" data-ng-repeat="o in invalidFields.missingValue">
@@ -35,15 +35,16 @@
         </div>
     </div>
 
-
 </div>
 <div class="modal-footer">
     <div class="row">
         <div class="col-xs-8">
-            <button type="button" class="btn btn-primary btn-lg btn-block" data-ng-click="editPerson(editPersonForm)">Tallenna tiedot</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" data-ng-click="editPerson(editPersonForm)"
+                    data-ng-bind="i18n.admin.content.form.tallenna[lang]"></button>
         </div>
         <div class="col-xs-4">
-            <button type="button" class="btn btn-danger btn-lg btn-block" data-ng-click="removePerson(selectedPerson.id)">Poista henkilö</button>
+            <button type="button" class="btn btn-danger btn-lg btn-block" data-ng-click="removePerson(selectedPerson.id)"
+                    data-ng-bind="i18n.admin.content.form.poista[lang]"></button>
         </div>
     </div>
 </div>
