--- a/src/app/js/shared/person-edit-modal.html
+++ b/src/app/js/shared/person-edit-modal.html
@@ -5,7 +5,7 @@
         </h3>
         <button class="btn btn-default pull-right "
                 data-ng-click="cancel()"
-                title="i18n.admin.content.form.sulje[lang]">
+                title="{{i18n.admin.content.form.sulje[lang]}}">
             {{i18n.admin.content.form.sulje[lang]}}
             <i class="fa fa-close fa-lg pl"></i>
         </button>
