--- a/src/app/scss/components/_table.scss
+++ b/src/app/scss/components/_table.scss
@@ -52,3 +52,10 @@
   }
 
 }
+
+.person-publication-list {
+  margin: 30px 15px;
+  border: 1px solid #eee;
+  padding: 10px 20px 10px 20px;
+  background: #f6f6f6;
+}
