--- a/src/app/html/admin/vie.html
+++ b/src/app/html/admin/vie.html
@@ -186,7 +186,7 @@
             </uib-accordion-heading>
             <div class="p-1" data-ng-if="user.visibleFields">
 
-                <p data-ng-bind="i18n.admin.content.lisaa.teksti[lang]"></p>
+                <p data-ng-bind="i18n.admin.content.lataus.lisaa.teksti[lang]"></p>
 
                 <person-form-directive  data-ng-form="personForm" selected-person="personData" lang="lang"></person-form-directive>
 
