--- a/src/app/js/directives/person-publication-list.html
+++ b/src/app/js/directives/person-publication-list.html
@@ -1,5 +1,5 @@
 <div>
-    <h4>{{i18n.admin.content.julkaisut.title1[lang]}} {{person.etunimi}} {{person.sukunimi}} ({{person.orcid}}) {{i18n.admin.content.julkaisut.title2[lang]}}:</h4>
+    <h4 class="text-secondary">{{person.etunimi}} {{person.sukunimi}} ({{person.orcid}})</h4>
     <div class="row">
         <div class="col-xs-12">
             <table class="table table-condensed">
@@ -16,7 +16,7 @@
                     </tr>
                 </tbody>
             </table>
-            <div data-ng-if="!publicationList.length">
+            <div class="text-secondary pb-lg"  data-ng-if="!publicationList.length">
                 {{i18n.admin.content.julkaisut.eijulkaisuja[lang]}}
             </div>
         </div>
