--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1108,7 +1108,7 @@
          <i data-ng-if="isFieldRequired('avainsanat')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
          <span data-ng-if="isFieldRequired('avainsanat')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
-       <div class="col-sm-8 col-xs-12 justus-data">
+       <div class="col-sm-7 col-xs-11 justus-data">
          <tags-input
                  data-ng-model="avainsanatTags"
                  data-replace-spaces-with-dashes="false"
@@ -1132,6 +1132,9 @@
                    max-results-to-show="300">
            </auto-complete>
          </tags-input>
+       </div>
+       <div class="col-xs-1 pt">
+         <i class='fa fa-spinner fa-spin fa-2x' data-ng-show='avainsanatLataa'></i>
        </div>
      </div>
 
