Change footer privacy policy link.

--- a/src/app/html/footer.html
+++ b/src/app/html/footer.html
@@ -75,8 +75,8 @@
                         </a>
                     </p>
                     <p class="text-xl mb-0">
-                        <a class="link-white" href="https://wiki.eduuni.fi/pages/viewpage.action?pageId=30310801" target="__blank">
-                            {{i18n.footer.tietosuoja[lang]}}
+                        <a class="link-white" href="https://wiki.eduuni.fi/pages/viewpage.action?pageId=192547335" target="__blank">
+                            {{i18n.footer.rekisteroiduninformointi[lang]}}
                             <i class="fa fa-external-link pl-x"></i>
                         </a>
                     </p>
